@@ -1,2 +1,11 @@
-[![Review Assignment Due Date](https://classroom.github.com/assets/deadline-readme-button-24ddc0f5d75046c5622901739e7c5dd533143b0c8e959d652212380cedb1ea36.svg)](https://classroom.github.com/a/cmbFtiDj)
+
 # Hotelevator
+
+to run the the game you must open it through hotelevator.jar 
+using this command trough the console
+
+```java -jar --module-path "{PATH TO YOUR javafx-sdk}/lib" --add-modules javafx.fxml,javafx.graphics,javafx.media,javafx.controls .\Hotelevator.jar```
+
+
+Demo video : https://youtu.be/-p691BQhDaU
+Documentation : https://docs.google.com/document/d/1--5PC4cdB7muiYi4xnnY4T-5RaTDRYA_VGZtZgtdt70/edit?usp=sharing
